[gd_scene load_steps=2 format=2]

[ext_resource path="res://demo/ChooseScreen.gd" type="Script" id=1]

[node name="ChooseScreen" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Title" type="Label" parent="."]
margin_right = 158.0
margin_bottom = 35.0
rect_scale = Vector2( 3, 3 )
text = "Choose Object"
align = 1
valign = 1

[node name="ShowObject" type="Sprite" parent="."]
position = Vector2( 250.167, 328.088 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
editor/display_folded = true
margin_left = 16.0
margin_top = 581.314
margin_right = 464.0
margin_bottom = 654.314
alignment = 1

[node name="Button1" type="Button" parent="HBoxContainer"]
margin_left = 119.0
margin_right = 186.0
margin_bottom = 73.0
text = "Object 1"

[node name="Button2" type="Button" parent="HBoxContainer"]
margin_left = 190.0
margin_right = 257.0
margin_bottom = 73.0
text = "Object 2"

[node name="Button3" type="Button" parent="HBoxContainer"]
margin_left = 261.0
margin_right = 328.0
margin_bottom = 73.0
text = "Object 3"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
editor/display_folded = true
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -203.815
margin_top = -57.3525
margin_right = 7.18472
margin_bottom = -33.3525
rect_scale = Vector2( 2, 2 )
alignment = 1

[node name="start" type="Button" parent="VBoxContainer"]
margin_top = 2.0
margin_right = 210.0
margin_bottom = 22.0
text = "Start Game"

[connection signal="pressed" from="HBoxContainer/Button1" to="." method="_on_Button1_pressed"]
[connection signal="pressed" from="HBoxContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="HBoxContainer/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="VBoxContainer/start" to="." method="_on_start_pressed"]
